--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   meta: ^1.3.0
   pointycastle: ^3.0.1
   protobuf: ^2.0.0
+  dio: ^4.0.4
 
 dev_dependencies:
   build_runner: ^2.1.11
